INCLUDE/Vcl/NSAPI.HPP


    struct TSession;

    char *servact_translate_uri(char *uri, TSession *sn);


typedef void __cdecl (*TAtRestart)(void * Data);


typedef void __cdecl (*TMagnusAtRestart)(void * Data);


struct TFile
{
	unsigned fh;
	char *fname;
	unsigned flsem;
} ;


typedef TFile *SYS_FILE;


struct TPbParam
{
	char *name;
	char *value;
} ;


typedef TPbParam *PPbParam;


struct TPblock;

typedef TPblock *PPblock;


struct TPblock
{
	int hsize;
	PPbEntry *ht;
} ;


typedef char * *PPCharArray;


typedef int SYS_NETFD;


struct TNetBuf;

typedef TNetBuf *PNetBuf;


struct TNetBuf
{
	int sd;
	int pos;
	int cursize;
	int maxsize;
	int rdtimeout;
	char address[64];
	char *inbuf;
	char *errmsg;
} ;


struct TSession;

typedef TSession *PSession;


struct TSession
{
	TPblock *client;
	int csd;
	TNetBuf *inbuf;
	int csd_open;
	in_addr iaddr;
	void * *pool;
	void *clauth;
} ;


struct THttpdObject
{
	TPblock *name;
	int nd;
	TDtable *dt;
} ;


typedef THttpdObject *PHttpdObject;


struct THttpdObjSet;

typedef THttpdObjSet *PHttpdObjSet;


struct THttpdObjSet
{
	int pos;
	PHttpdObject *obj;
	PPblock *initfns;
} ;


struct TConfGlobalVars
{
	int Vport;
	char *Vaddr;
	void * *Vuserpw;
	char *Vchr;
	char *Vpidfn;
	int Vpool_max;
	int Vpool_min;
	int Vpool_life;
	int Vpool_maxthreads;
	int Vpool_minthreads;
	char *Vserver_hostname;
	char *Vroot_object;
	THttpdObjSet *Vstd_os;
	void *Vacl_root;
	char *Vmaster_error_log;
	char *Vserver_root;
	char *Vserver_id;
} ;


typedef TConfGlobalVars *PConfGlobalVars;


struct TRequest;

typedef TRequest *PRequest;


struct TRequest
{
	TPblock *vars;
	TPblock *reqpb;
	int loadhdrs;
	TPblock *headers;
	int senthdrs;
	TPblock *srvhdrs;
	THttpdObjSet *os;
	THttpdObjSet *tmpos;
	char *statpath;
	char *staterr;
	TStat *finfo;
	int aclstate;
	int acldirno;
	char *aclname;
	TPblock *aclpb;
	BOOL request_is_cacheable;
	BOOL directive_is_cacheable;
	char *cached_headers;
	int cached_headers_len;
	char *cached_date_header;
} ;

extern PACKAGE PPbParam __fastcall pblock_remove(char * name, PPblock pb);

extern PACKAGE char * __fastcall session_dns(PSession sn);

extern PACKAGE AnsiString __fastcall NSstr2String(char * nsStr);

extern "C" char * __cdecl system_version(void);

extern "C" void __cdecl system_free(void * ptr);

extern "C" void __cdecl magnus_atrestart(TAtRestart fn, void * data);

extern "C" SYS_FILE __cdecl system_fopenWA(char * path);

extern "C" void __cdecl system_fclose(SYS_FILE fd);

extern "C" int __cdecl system_fwrite_atomic(SYS_FILE fd, void * buf, int sz);

extern "C" int __cdecl param_free(PPbParam pp);

extern "C" PPblock __cdecl pblock_create(int n);

extern "C" void __cdecl pblock_free(PPblock pb);

extern "C" char * __cdecl pblock_findval(char * name, PPblock pb);

extern "C" PPbParam __cdecl pblock_nvinsert(char * name, char * value, PPblock pb);

extern "C" PPbParam __cdecl pblock_nninsert(char * name, int value, PPblock pb);

extern "C" char * __cdecl pblock_pblock2str(PPblock pb, char * str);

extern "C" void __cdecl pblock_copy(PPblock src, PPblock dst);

extern PACKAGE PPbParam __cdecl _pblock_fr(char * name, PPblock pb, BOOL remove);

extern "C" int __cdecl net_read(int sd, char * buf, int sz, int timeout);

extern "C" int __cdecl net_write(int sd, char * buf, int sz);

extern "C" BOOL __cdecl net_isalive(int sd);

extern "C" char * __cdecl session_dns_lookup(PSession sn, BOOL verify);

extern "C" int __cdecl shexp_casecmp(char * str, char * exp);

extern "C" PPCharArray __cdecl util_env_create(PPCharArray env, int n, int &pos);

extern "C" char * __cdecl util_env_str(char * name, char * value);

extern "C" void __cdecl util_env_free(PPCharArray env);

extern "C" char * __cdecl util_env_find(PPCharArray env, char * name);

extern "C" PHttpdObject __cdecl objset_findbyname(char * name, PHttpdObjSet ign, PHttpdObjSet os);

extern "C" PConfGlobalVars __cdecl conf_getglobals(void);

extern "C" char * __cdecl request_translate_uri(char * uri, PSession sn);

extern "C" int __cdecl http_scan_headers(PSession sn, PNetBuf buf, char * t, PPblock headers);

extern "C" int __cdecl http_start_response(PSession sn, PRequest rq);

extern "C" PPCharArray __cdecl http_hdrs2env(PPblock pb);

extern "C" void __cdecl http_status(PSession sn, PRequest rq, int n, char * r);
inline char * __cdecl request_translate_uri(char * uri, PSession sn)
{
	return servact_translate_uri(uri, sn);
}